# RustDB

./: .gitignore  CHANGELOG.md  Cargo.toml  Project-Requirements.md  README.md  scope-of-work-mvp.md
.github/workflows/: benchmarks.yml  ci.yml  docker.yml  release.yml  security.yml
documentation/: scope-of-work-mvp.md
documentation/security/: auth.md
documentation/storage/: page-layout-security-performance-audit.md  page-layout-technical-reference.md
rustdb/: .editorconfig  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  docker-compose.yml
rustdb-server/: Cargo.toml  build.rs
rustdb-server/cpp/include/rustdb/: buffer_pool.h  frame.h
rustdb-server/cpp/src/: buffer_pool.cpp  frame.cpp
rustdb-server/rust-bridge/src/: buffer_pool.rs
rustdb-server/src/: main.rs
rustdb-server/src/security/: crypto.rs  mod.rs
rustdb-server/src/security/auth/: api_key.rs  audit.rs  error.rs  hashing.rs  macros.rs  middleware.rs  mod.rs  rate_limit.rs  rbac.rs  rotation.rs  verification.rs
rustdb-server/src/security/crypto/: aes_gcm.rs  mod.rs  nonce.rs
rustdb-server/src/storage/disk/: disk_manager.rs
rustdb-server/src/storage/page/: checksum.rs  header.rs  layout.rs  mod.rs  page.rs  slot.rs
rustdb-server/tests/: security.rs  storage.rs
rustdb-server/tests/security/: auth.rs  test_nonce.rs
rustdb-server/tests/security/crypto/: mod.rs  test_aes_gcm.rs  test_xchacha20.rs
rustdb-server/tests/storage/: layout.rs
rustdb/configs/: dev.toml  logging.toml  production.toml  staging.toml
rustdb/helm/: Chart.yaml  values.yaml
rustdb/tests/api/: lib.rs
(+99 files in other folders)
