[package]
name = "rustdb-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
axum = "0.6"
argon2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
rand_core = "0.6"
lazy_static = "1.4"
tokio = { version = "1.33", features = ["macros", "rt-multi-thread"] }
tower = "0.4"

[dev-dependencies]
serial_test = "2.0"